# SimpleDeck

./: README.md  SimpleDeck-v0.1.sila.xml  client.py  pyproject.toml  requirements.txt  run.sh
simple_deck/: server.py
simple_deck/feature_implementations/: simpledeckserver_impl.py  updated_simpledeckserver_impl.py
